# circularbuf

./: Cargo.toml  README.md
.github/workflows/: ci.yml  loc.yml
src/: lib.rs
tests/: test.rs
