[package]
name = "circularbuf"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/al8n/circularbuf"
homepage = "https://github.com/al8n/circularbuf"
documentation = "https://docs.rs/circularbuf"
description = "Rust fixed size circular (ring) buffer"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
categories = ["no-std", "data-structures"]
keywords = ["circbuf", "ring"]

[features]
default = ["std"]
alloc = []
std = []
future = ["futures-io/std", "std"]
tokio = ["dep:tokio", "std"]

[dependencies]

futures-io = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["io"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
